k8s/monitoring/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-intelligence-monitoring
  labels:
    name: data-intelligence-monitoring
