k8s/monitoring/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: data-intelligence-monitoring
  labels:
    app: grafana
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
